--- a/app/src/main/res/layout/user_list_item_secondary.xml
+++ b/app/src/main/res/layout/user_list_item_secondary.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="8dp"
-    android:paddingEnd="100dp"
+    android:paddingStart="100dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,10 +23,10 @@
             android:id="@+id/profilePic"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_baseline_person_24"
             android:background="@drawable/shape"
-            app:layout_constraintEnd_toStartOf="@id/text_wrapper"
-            app:layout_constraintStart_toStartOf="@id/wrapper"
+            android:src="@drawable/ic_baseline_person_24"
+            app:layout_constraintEnd_toEndOf="@id/wrapper"
+            app:layout_constraintStart_toEndOf="@+id/text_wrapper"
             app:layout_constraintTop_toTopOf="@id/wrapper">
 
         </ImageView>
@@ -38,13 +38,13 @@
             android:orientation="vertical"
             android:paddingStart="5dp"
             android:paddingLeft="5dp"
-            app:layout_constraintEnd_toEndOf="@id/wrapper"
-            app:layout_constraintStart_toEndOf="@id/profilePic"
->
+            app:layout_constraintStart_toStartOf="@id/wrapper"
+            app:layout_constraintEnd_toStartOf="@id/profilePic"
+            >
 
 
             <TextView
-                android:id="@+id/userName"
+                android:id="@+id/userNameSecondary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
@@ -53,7 +53,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/message"
+                android:id="@+id/messageSecondary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView" />
